--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 html {
   margin: 0;
-height:100vh;
-width: 100vw;
+
   background-color: black;
 }
