--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -2,11 +2,12 @@
   
   background-image: url('../components/images/lio.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: fixed;
-  height: 100vh;
-  width:100vw;
-  margin:0;
+  background-size: 100%;
+  background-position: bottom right;
+  height:100vh;
+  width: 100vw;
+  min-height:750px;
+  min-width: 1080px;
 }
 
 
